--- a/HSTUTU_HFT_2021221.Logic/HSTUTU_HFT_2021221.Logic.csproj
+++ b/HSTUTU_HFT_2021221.Logic/HSTUTU_HFT_2021221.Logic.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HSTUTU_HFT_2021221.Models\HSTUTU_HFT_2021221.Models.csproj" />
+    <ProjectReference Include="..\HSTUTU_HFT_2021221.Repository\HSTUTU_HFT_2021221.Repository.csproj" />
+  </ItemGroup>
 
 </Project>
