--- a/HSTUTU_HFT_2021221.Test/HSTUTU_HFT_2021221.Test.csproj
+++ b/HSTUTU_HFT_2021221.Test/HSTUTU_HFT_2021221.Test.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HSTUTU_HFT_2021221.Logic\HSTUTU_HFT_2021221.Logic.csproj" />
+    <ProjectReference Include="..\HSTUTU_HFT_2021221.Models\HSTUTU_HFT_2021221.Models.csproj" />
+    <ProjectReference Include="..\HSTUTU_HFT_2021221.Repository\HSTUTU_HFT_2021221.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
