--- a/HSTUTU_HFT_2021221.Data/HSTUTU_HFT_2021221.Data.csproj
+++ b/HSTUTU_HFT_2021221.Data/HSTUTU_HFT_2021221.Data.csproj
@@ -5,6 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="HSTUTU_HFT_2021221.mdf" />
+    <None Remove="HSTUTU_HFT_2021221_log.ldf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="HSTUTU_HFT_2021221.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="HSTUTU_HFT_2021221_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
@@ -16,15 +30,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HSTUTU_HFT_2021221.Models\HSTUTU_HFT_2021221.Models.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="HSTUTU_HFT_2021221.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="HSTUTU_HFT_2021221_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
