--- a/HSTUTU_HFT_2021221.Test/HSTUTU_HFT_2021221.Test.csproj
+++ b/HSTUTU_HFT_2021221.Test/HSTUTU_HFT_2021221.Test.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="NUnit" Version="3.13.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HSTUTU_HFT_2021221.Logic\HSTUTU_HFT_2021221.Logic.csproj" />
     <ProjectReference Include="..\HSTUTU_HFT_2021221.Models\HSTUTU_HFT_2021221.Models.csproj" />
     <ProjectReference Include="..\HSTUTU_HFT_2021221.Repository\HSTUTU_HFT_2021221.Repository.csproj" />
