--- a/HSTUTU_HFT_2021221.Endpoint/HSTUTU_HFT_2021221.Endpoint.csproj
+++ b/HSTUTU_HFT_2021221.Endpoint/HSTUTU_HFT_2021221.Endpoint.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -9,6 +9,13 @@
     <ProjectReference Include="..\HSTUTU_HFT_2021221.Logic\HSTUTU_HFT_2021221.Logic.csproj" />
     <ProjectReference Include="..\HSTUTU_HFT_2021221.Models\HSTUTU_HFT_2021221.Models.csproj" />
     <ProjectReference Include="..\HSTUTU_HFT_2021221.Repository\HSTUTU_HFT_2021221.Repository.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Owin" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0" />
+    <PackageReference Include="Nancy" Version="2.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
