--- a/HSTUTU_HFT_2021221.Client/HSTUTU_HFT_2021221.Client.csproj
+++ b/HSTUTU_HFT_2021221.Client/HSTUTU_HFT_2021221.Client.csproj
@@ -6,10 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HSTUTU_HFT_2021221.Data\HSTUTU_HFT_2021221.Data.csproj" />
-    <ProjectReference Include="..\HSTUTU_HFT_2021221.Logic\HSTUTU_HFT_2021221.Logic.csproj" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HSTUTU_HFT_2021221.Models\HSTUTU_HFT_2021221.Models.csproj" />
-    <ProjectReference Include="..\HSTUTU_HFT_2021221.Repository\HSTUTU_HFT_2021221.Repository.csproj" />
   </ItemGroup>
 
 </Project>
