--- a/HSTUTU_HFT_2021221.Endpoint/HSTUTU_HFT_2021221.Endpoint.csproj
+++ b/HSTUTU_HFT_2021221.Endpoint/HSTUTU_HFT_2021221.Endpoint.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Json.Net" Version="1.0.33" />
     <PackageReference Include="Microsoft.AspNetCore.Owin" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0" />
     <PackageReference Include="Nancy" Version="2.0.0" />
